--- a/project/elder-project/src/main/resources/static/styles/style.css
+++ b/project/elder-project/src/main/resources/static/styles/style.css
@@ -370,4 +370,54 @@ h2.myself_serviceTit{
     text-overflow:initial;
     white-space:initial;
 }
+/*首页开始*/
+.userLocation{
+    width:100%;
+    line-height:30px;
+    color:#fff;
+    padding-left:40px;
+    background:url(../images/index_location.png) 16px center no-repeat #ff8e01;
+    background-size:16px;
+}
+.indexIconList{
+    padding:4px 4%;
+    overflow:hidden;
+}
+.indexIconList.iconList{
+    background:#f5f5f5;
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
+}
+.indexIconList a{
+    width:25%;
+    float:left;
+    text-align:center;
+    margin:12px 0px;
+    text-decoration:none;
+    color:#060d25;
+}
+.indexIconList a img{
+    width:30px;
+    height:30px;
+    margin-bottom:10px;
+}
+.indexIconList a p{
+
+}
+.indexImg{
+    padding:0px 16px;
+    margin-bottom:20px;
+}
+.indexImg a{
+    text-decoration:none;
+}
+.indexImg img{
+    width:100%;
+    margin-bottom:16px;
+}
+.button.button120{
+    background:#FF8E01;
+    margin-bottom:100px;
+    border-radius:23px;
+}
 
