--- a/project/elder-project/src/main/resources/static/js/views/my/myselfCenter.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myselfCenter.html
@@ -56,7 +56,7 @@
             <i class="icon ion-ios-arrow-right"></i>
         </a>
         <a class="item item-icon-left item-icon-right" style="margin-top:10px;"
-            ui-sref="aboutUs">
+            href="http://hlsenior.com.cn/elder/aboutUs">
             <i class="icon">
                 <img src="images/laoyou_icon_01.png">
             </i>
