--- a/project/elder-project/src/main/resources/static/js/views/project.html
+++ b/project/elder-project/src/main/resources/static/js/views/project.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<ion-view>
+    <ion-content>
+        <div style="width:80%;margin:0 auto;">
+            <a style="text-decoration:none;" href="http://hlsenior.com.cn/elder/surveyLogin"><button class="button button-full button-energized button120">进入问卷</button></a>
+        </div>
+        <div>
+            <!--基础面积图-->
+            <div id="container1" style="width:100%;height:400px;margin:40px 0px;"></div>
 
-</body>
-</html>
+            <!--收入消费金字塔图-->
+            <div id="container2" style="min-width:100%;height:400px;margin:40px 0px;"></div>
+
+            <!--街道老人失能失智情况统计-->
+            <div id="container3" style="min-width:100%;height:400px;margin:40px 0px;"></div>
+
+            <!--慢性病热力图-->
+            <div id="container4" style="width:100%;height:400px;margin:40px 0px;"></div>
+
+            <!--慢性病类型和数量-->
+            <div id="container5" style="min-width:100%;height:400px;margin:40px 0px;"></div>
+
+            <!--居家上门服务需求分析-->
+            <div id="container6" style="min-width:100%;height:400px;margin:40px 0px;"></div>
+
+        </div>
+
+
+    </ion-content>
+</ion-view>
