--- a/project/elder-project/src/main/resources/static/styles/style.css
+++ b/project/elder-project/src/main/resources/static/styles/style.css
@@ -380,13 +380,8 @@ h2.myself_serviceTit{
     background-size:16px;
 }
 .indexIconList{
-    padding:4px 4%;
     overflow:hidden;
-}
-.indexIconList.iconList{
-    background:#f5f5f5;
-    border-top:1px solid #ccc;
-    border-bottom:1px solid #ccc;
+    border-bottom:1px solid #ddd;
 }
 .indexIconList a{
     width:25%;
@@ -401,12 +396,33 @@ h2.myself_serviceTit{
     height:30px;
     margin-bottom:10px;
 }
-.indexIconList a p{
-
+.marginCont{
+    height:8px;
+    background:#f5f5f5;
+}
+.healthContainer{
+    padding:16px 16px 6px;
+    position:relative;
+    border-top:1px solid #ddd;
+    border-bottom:1px solid #ddd;
+}
+.healthContainer h3{
+    margin-bottom:12px;
+    font-size:18px;
+}
+.healthContainer p{
+    color:#494951;
+}
+.healthIcon{
+    width:86px;
+    position:absolute;
+    right:16px;
+    top:22px;
 }
 .indexImg{
-    padding:0px 16px;
+    padding:16px 16px 100px;
     margin-bottom:20px;
+    border-top:1px solid #ddd;
 }
 .indexImg a{
     text-decoration:none;
@@ -416,8 +432,11 @@ h2.myself_serviceTit{
     margin-bottom:16px;
 }
 .button.button120{
-    background:#FF8E01;
-    margin-bottom:100px;
     border-radius:23px;
+    margin-top:40px;
+    background: -webkit-linear-gradient(to right,#FE4600, #FF801F); /* Safari 5.1 - 6.0 */
+    background: -o-linear-gradient(to right,#FE4600, #FF801F); /* Opera 11.1 - 12.0 */
+    background: -moz-linear-gradient(to right,#FE4600, #FF801F); /* Firefox 3.6 - 15 */
+    background: linear-gradient(to right,#FE4600, #FF801F); /* 标准的语法 */
 }
 
