--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -33,14 +33,14 @@
             </a>
         </div>
         <div class="marginCont"></div>
-       <div class="healthContainer" href="">
+       <div class="healthContainer" ng-click="goHealth()">
            <h3>您的健康管理方案</h3>
            <p>在这里能得到健康风险评估、健康监测<br/>干预和合理的健康指导</p>
-           <a href="http://www.wellsunny.net/API/LogOn?token=7d2b701756e841adb161d14a0534776c&medical_code=63799983&url=%2fApp%2fIndex"><img class="healthIcon" src="/images/index_jk.png" alt=""></a>
+           <img class="healthIcon" src="/images/index_jk.png" alt="">
        </div>
         <div class="marginCont"></div>
         <div class="indexImg">
-            <a ui-sref="project"><img src="/images/index_banner2.png" alt=""></a>
+            <a ui-sref="project"><img src="/images/index_banner4.png" alt=""></a>
             <a href=""><img src="/images/index_banner3.png" alt=""></a>
             <a href="tel:120"><button class="button button-full button-energized button120">120 一键呼叫</button></a>
         </div>
