--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -35,7 +35,7 @@
         <div class="marginCont"></div>
        <div class="healthContainer" ng-click="goHealth()">
            <h3>您的健康管理方案</h3>
-           <p>在这里能得到健康风险评估、健康监测<br/>干预和合理的健康指导</p>
+           <p>在这里能得到健康风险评估、健康<br/>监测干预和合理的健康指导</p>
            <img class="healthIcon" src="/images/index_jk.png" alt="">
        </div>
         <div class="marginCont"></div>
