--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-content>
         <div class="userLocation">{{location}}</div>
-        <img width="100%" src="/images/index_banner.png" alt="">
+        <img width="100%" src="/images/index_banner.jpg" alt="">
         <div class="indexIconList">
             <a href="http://www.wellsunny.net/API/LogOn?token=7d2b701756e841adb161d14a0534776c&medical_code=63799983&back_url=app&url=%2fApp%2fLifeRadar">
                 <img src="/images/index_jkzs.png" alt="">
