--- a/project/elder-project/src/main/resources/static/js/views/project.html
+++ b/project/elder-project/src/main/resources/static/js/views/project.html
@@ -1,26 +1,27 @@
 <ion-view>
     <ion-content>
-        <div style="width:80%;margin:0 auto;">
-            <a style="text-decoration:none;" href="http://hlsenior.com.cn/elder/surveyLogin"><button class="button button-full button-energized button120">进入问卷</button></a>
+        <div style="width:85%;margin:0 auto;">
+            <a style="text-decoration:none;" href="http://hlsenior.com.cn/elder/surveyLogin"><button class="button button-full button-energized button120" style="margin:16px 0px;">进入问卷</button></a>
         </div>
         <div>
+            <div class="hc"></div>
             <!--基础面积图-->
-            <div id="container1" style="width:100%;height:400px;margin:40px 0px;"></div>
-
+            <div id="container1" class="project_cont"></div>
+            <div class="hc"></div>
             <!--收入消费金字塔图-->
-            <div id="container2" style="min-width:100%;height:400px;margin:40px 0px;"></div>
-
+            <div id="container2" class="project_cont"></div>
+            <div class="hc"></div>
             <!--街道老人失能失智情况统计-->
-            <div id="container3" style="min-width:100%;height:400px;margin:40px 0px;"></div>
-
+            <div id="container3" class="project_cont"></div>
+            <div class="hc"></div>
             <!--慢性病热力图-->
-            <div id="container4" style="width:100%;height:400px;margin:40px 0px;"></div>
-
+            <div id="container4" class="project_cont"></div>
+            <div class="hc"></div>
             <!--慢性病类型和数量-->
-            <div id="container5" style="min-width:100%;height:400px;margin:40px 0px;"></div>
-
+            <div id="container5" class="project_cont" style="height:380px;"></div>
+            <div class="hc"></div>
             <!--居家上门服务需求分析-->
-            <div id="container6" style="min-width:100%;height:400px;margin:40px 0px;"></div>
+            <div id="container6" class="project_cont" style="height:400px;"></div>
 
         </div>
 
