--- a/project/elder-project/src/main/resources/static/js/views/community/activity/activityList.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/activityList.html
@@ -6,8 +6,8 @@
             <a class="item"
                ng-repeat="item in activityList"
                ui-sref="activityDetail({activityId:item.activityId})">
-                <h2 style="margin-bottom:8px;">{{item.activityName}}</h2>
-                <p><i class="icon ion-location" style="margin-left:2px;"></i>&nbsp;{{item.activityAddress}}</p>
+                <h2 style="margin-bottom:8px;width:80%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;">{{item.activityName}}</h2>
+                <p style="width:80%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;"><i class="icon ion-location" style="margin-left:2px;"></i>&nbsp;{{item.activityAddress}}</p>
                 <p><i class="icon ion-person"></i>&nbsp;{{item.activityAttendedNum}}人已报名</p>
                 <span ng-class="{true:'activityIcon',false:'activityIcon end'}[item.activityStatus=='进行中']">{{item.activityStatus}}</span>
             </a>
