--- a/project/elder-project/src/main/resources/static/js/views/project.html
+++ b/project/elder-project/src/main/resources/static/js/views/project.html
@@ -1,7 +1,9 @@
 <ion-view>
     <ion-content>
         <div style="width:85%;margin:0 auto;">
-            <a style="text-decoration:none;" href="http://hlsenior.com.cn/elder/surveyLogin"><button class="button button-full button-energized button120" style="margin:16px 0px;">进入问卷</button></a>
+            <a style="text-decoration:none;" href="http://hlsenior.com.cn/elder/surveyLogin">
+                <button class="button button-full button-energized button120" style="margin:16px 0px;">北京老年人示范调研系统</button>
+            </a>
         </div>
         <div>
             <div class="hc"></div>
