--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -41,7 +41,7 @@
         <div class="marginCont"></div>
         <div class="indexImg">
             <a ui-sref="project"><img src="/images/index_banner4.png" alt=""></a>
-            <a href=""><img src="/images/index_banner3.png" alt=""></a>
+            <!--<a href=""><img src="/images/index_banner3.png" alt=""></a>-->
             <a href="tel:120"><button class="button button-full button-energized button120">120 一键呼叫</button></a>
         </div>
 
