医养结合页面

--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -41,7 +41,7 @@
         <div class="marginCont"></div>
         <div class="indexImg">
             <a ui-sref="project"><img src="/images/index_banner5.png" alt=""></a>
-            <!--<a href=""><img src="/images/index_banner3.png" alt=""></a>-->
+            <a href="https://b.eqxiu.com/s/dS5SofeY?eqrcode=1&share_level=2&from_user=9d3ce095-cac3-4a42-bcf2-b13228879961&from_id=f30c36bb-5211-4647-98a4-42a6871859e8&share_time=1523928768033&from=singlemessage&isappinstalled=0"><img src="/images/index_banner3.png" alt=""></a>
             <a href="tel:120"><button class="button button-full button-energized button120">120 一键呼叫</button></a>
         </div>
 
