--- a/project/elder-project/src/main/resources/static/styles/style.css
+++ b/project/elder-project/src/main/resources/static/styles/style.css
@@ -452,3 +452,45 @@ h2.myself_serviceTit{
     border-bottom:1px solid #ddd;
 }
 
+.index_news_list{
+    background:#f5f5f5;
+}
+.index_news_list a{
+    display: block;
+    margin-bottom:10px;
+    padding-top: 14px;
+    background: #fff;
+    height: 114px;
+    padding-left: 16px;
+}
+.index_news_list img{
+    float: left;
+    width: 80px;
+    height: 80px;
+    margin-right: 13px;
+    margin-top: 3px;
+}
+.index_news_list div{
+    float:left;
+    width:290px;
+}
+.index_news_list h3{
+    font-size: 18px;
+    margin-bottom: 6px;
+}
+.index_news_list p{
+    color: #494951;
+}
+.news_article{
+    padding:20px;
+}
+.news_article h3{
+    margin-bottom:18px;
+}
+.news_article img{
+    width:100%;
+}
+.news_article h4{
+    margin-bottom:14px;
+}
+
