--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -1,3 +1,12 @@
+<style>
+    .index_news_list div p{
+        overflow:hidden;
+        text-overflow:ellipsis;
+        display:-webkit-box;
+        -webkit-box-orient:vertical;
+        -webkit-line-clamp:3;
+    }
+</style>
 <ion-view>
     <ion-content>
         <div class="userLocation">{{location}}</div>
@@ -39,11 +48,12 @@
            <!--<img class="healthIcon" src="/images/index_jk.png" alt="">-->
        <!--</div>-->
         <!--<div class="marginCont"></div>-->
-        <!--<div class="indexImg">-->
+        <div class="indexImg" style="padding:12px 16px;border-bottom:1px solid #ddd;">
             <!--<a ui-sref="project"><img src="/images/index_banner5.png" alt=""></a>-->
             <!--<a href="https://b.eqxiu.com/s/dS5SofeY?eqrcode=1&share_level=2&from_user=9d3ce095-cac3-4a42-bcf2-b13228879961&from_id=f30c36bb-5211-4647-98a4-42a6871859e8&share_time=1523928768033&from=singlemessage&isappinstalled=0"><img src="/images/index_banner3.png" alt=""></a>-->
-            <!--<a href="tel:120"><button class="button button-full button-energized button120">120 一键呼叫</button></a>-->
-        <!--</div>-->
+            <a href="tel:95573"><button class="button button-full button-energized button120">一键呼叫</button></a>
+        </div>
+        <div class="marginCont"></div>
         <div class="index_news_list">
            <a ui-sref="article({id:'1'})">
                <img src="/images/newsImg01.jpg" alt="">
