--- a/project/elder-project/src/main/resources/static/js/views/index.html
+++ b/project/elder-project/src/main/resources/static/js/views/index.html
@@ -59,70 +59,70 @@
                <img src="/images/newsImg01.jpg" alt="">
                <div>
                    <h3>好心情对老人有多重要</h3>
-                   <p>在生活中，每一个人都会有变老的一天。所以我们一定要重视老年人朋友的一些问题，平时没有什么事情的时候也要多多关……</p>
+                   <p>在生活中，每一个人都会有变老的一天。所以我们一定要重视老年人朋友的一些问题，平时没有什么事情的时候也要多多关心老人。同时老人保持良好的情绪，对于身体健康极为重要。就老人常见的慢性病而言，就与老人心态息息相关。</p>
                </div>
            </a>
             <a ui-sref="article({id:'2'})">
                 <img src="/images/newsImg08.jpg" alt="">
                 <div>
                     <h3>“将就”镶牙后患多</h3>
-                    <p>近日发现各大医院口腔科门诊人满为患。据专家介绍，因为要过年了，大家每天都与美味相伴，牙齿的负担变重了，致使口腔……</p>
+                    <p>近日发现各大医院口腔科门诊人满为患。据专家介绍，因为要过年了，大家每天都与美味相伴，牙齿的负担变重了，致使口腔科门诊病人比往常增加了10%。有些平时有龋齿的朋友没有及时进行治疗和修复，随着咀嚼负担变重，在吃着美味食物的时候，一不小心就很容易把牙齿“吃掉”半边。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'3'})">
                 <img src="/images/newsImg04.jpg" alt="">
                 <div>
                     <h3>老人养生需要避开的四个误区</h3>
-                    <p>运动有益长寿，但要量力而行。有些老人喜欢在晨练时快跑，这并不值得提倡。因为，跑步时机体耗氧量会增加，易导致呼吸……</p>
+                    <p>运动有益长寿，但要量力而行。有些老人喜欢在晨练时快跑，这并不值得提倡。因为，跑步时机体耗氧量会增加，易导致呼吸短促、机体缺氧，而大多数老人本身患有不同程度的高血压、支气管炎等慢性疾病，很容易诱发心肌梗塞或脑血管意外。对老人来说，运动的最佳选择是散步，同时甩甩手、拍拍肩膀、扭扭腰胯，适可而止。体质很好的老人可以尝试慢跑，但一定要做好跑前热身和整理运动。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'4'})">
                 <img src="/images/newsImg03.jpg" alt="">
                 <div>
                     <h3>老年人腿脚无力怎么回事</h3>
-                    <p>生活中很多的老年人朋友经常出现腿脚无力的情况，给他们的生活和健康带来了极大的威胁。随着年龄大了，腿脚不灵活的老……</p>
+                    <p>生活中很多的老年人朋友经常出现腿脚无力的情况，给他们的生活和健康带来了极大的威胁。随着年龄大了，腿脚不灵活的老年人并没有当作一回事，但是需要注意的是双腿无力有可能是疾病的预示，因此不能忽视此种症状。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'5'})">
                 <img src="/images/newsImg05.jpg" alt="">
                 <div>
                     <h3>手麻是大病的征兆</h3>
-                    <p>在看门诊的时候，经常有手麻的患者来咨询，有的是一边，有的是两边。医生，是不是神经出问题了呀？这是手麻患者的第……</p>
+                    <p>在看门诊的时候，经常有手麻的患者来咨询，有的是一边，有的是两边。医生，是不是神经出问题了呀？这是手麻患者的第一直觉。的确，出现手麻后，很多人都会意识到，这可能是一种神经病变，事实上，周围神经病变也的确会导致麻木的现象，以对称性远端肢体的麻木为主，最常见于糖尿病周围神经并发症。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'6'})">
                 <img src="/images/newsImg11.jpg" alt="">
                 <div>
                     <h3>糖尿病人易陷入的几个误区</h3>
-                    <p>良好的血糖控制会大大延缓和减轻糖尿病并发症，使得糖尿病人能够和正常人一样的生活，并不影响寿命。但也有些糖尿病患者……</p>
+                    <p>良好的血糖控制会大大延缓和减轻糖尿病并发症，使得糖尿病人能够和正常人一样的生活，并不影响寿命。但也有些糖尿病患者不遵医嘱，盲目听信社会传言或固执己见，踏入防治误区，影响了自己的健康。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'7'})">
                 <img src="/images/newsImg12.jpg" alt="">
                 <div>
                     <h3>牙疼可能是心梗征兆</h3>
-                    <p>67岁的张大爷有烂牙，晚饭后突然觉得左侧牙痛，到医院口腔科检查，并没发现牙齿毛病。医生怀疑他是心梗，一查心电图，……</p>
+                    <p>67岁的张大爷有烂牙，晚饭后突然觉得左侧牙痛，到医院口腔科检查，并没发现牙齿毛病。医生怀疑他是心梗，一查心电图，果真是。进行对应治疗后，病情得以稳定，牙也不痛了。张大爷却一直纳闷，自己的牙痛怎么跟心脏扯上关系了呢？</p>
                 </div>
             </a>
             <a ui-sref="article({id:'8'})">
                 <img src="/images/newsImg02.jpg" alt="">
                 <div>
                     <h3>安度晚年离不开良好的心态</h3>
-                    <p>人退休之后，生活的主题与以前发生了很大的变化。而培养一门兴趣也成为了重要的事。无论在什么情况下，把握住热情，并……</p>
+                    <p>人退休之后，生活的主题与以前发生了很大的变化。而培养一门兴趣也成为了重要的事。无论在什么情况下，把握住热情，并与之为友，那么埋在心头的阴霾就能驱散。当自己不悦时，将全部精力投入到丰富多彩的生活中，就会感到其乐无穷。老人可以养小动物，可以养花草，可以种菜，可以下棋，可以学手工等等。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'9'})">
                 <img src="/images/newsImg14.jpg" alt="">
                 <div>
                     <h3>老年人冬季晨练六不宜</h3>
-                    <p> 老年人冬季出去晨练，应注意：不宜“早”。早晨气温低、雾气重、温度大，易患感冒、气喘、“老慢支”和肺心病等，还会使……</p>
+                    <p> 老年人冬季出去晨练，应注意：不宜“早”。早晨气温低、雾气重、温度大，易患感冒、气喘、“老慢支”和肺心病等，还会使病情加重。故老年人宜在太阳初升后外出锻炼，这时的空气才真正清新。</p>
                 </div>
             </a>
             <a ui-sref="article({id:'10'})">
                 <img src="/images/newsImg10.jpg" alt="">
                 <div>
                     <h3>心衰的特殊表现应引起注意</h3>
-                    <p>随着年龄的增长，老年人群中心力衰竭的患病率也会升高。值得注意的是，相当一部分老年心脏病患者，心功能已经不全，却……</p>
+                    <p>随着年龄的增长，老年人群中心力衰竭的患病率也会升高。值得注意的是，相当一部分老年心脏病患者，心功能已经不全，却缺少心衰的典型表现或被其他疾病的症状所掩盖，即所谓隐性心衰，故常易被人们忽视。心衰还有一些特殊表现，易被误认为其他疾病，也应引起注意。</p>
                 </div>
             </a>
         </div>
